# mainx

apps/gui-qt/scolvx/: CMakeLists.txt  app.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  settings.cpp  settings.h
apps/gui-qt/scolvx/config/: scolvx.cfg
apps/gui-qt/scolvx/descriptions/: scolvx.xml
