SET(PACKAGE_NAME ORIGINLOCATORVIEWX)
SET(APP_NAME scolvx)

INCLUDE_DIRECTORIES(.)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(
    ${PACKAGE_NAME}_SOURCES
        main.cpp
        mainwindow.cpp
        settings.cpp
)

SET(
    ${PACKAGE_NAME}_HEADERS
)

SET(
    ${PACKAGE_NAME}_MOC_HEADERS
        app.h
        mainwindow.h
)

SET(
    ${PACKAGE_NAME}_UI
        mainwindow.ui
)

SET(
    ${PACKAGE_NAME}_RESOURCES
)

FILE(GLOB descs "${CMAKE_CURRENT_SOURCE_DIR}/descriptions/*.xml")
INSTALL(FILES ${descs} DESTINATION ${SC3_PACKAGE_APP_DESC_DIR})

SC_ADD_GUI_EXECUTABLE(${PACKAGE_NAME} ${APP_NAME})
SC_ADD_VERSION(${PACKAGE_NAME} ${APP_NAME})
SC_LINK_LIBRARIES_INTERNAL(${APP_NAME} qt)

SC_INSTALL_INIT(${APP_NAME} ${INIT_ND_NB_TEMPLATE})
